--- a/05-restful-api/package.json
+++ b/05-restful-api/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "handlebars-helpers": "^0.10.0",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.2",
     "wax-on": "^1.2.2"
